# InstaPosterRs

./: Cargo.toml  Posts.db  sqlite3.lib
src/: contol_panel.rs  inst.rs  main.rs  msg_handler.rs  page_info.rs  user_info.rs  util.rs
src/graph_api/: fb.rs  ig.rs  mod.rs
src/instagrapi/: user.rs
src/tiktok_api/: mod.rs  session.rs  video.rs
