[package]
name = "InstaPosterF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.29.2"
chrono = "0.4.31"
rusqlite = "0.30.0"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
rustc-serialize = "0.3.25"
select = "0.6.0"
serde_json = "1.0.109"
anyhow = "1.0.78"