[package]
name = "InstaPosterF"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
frankenstein = "0.30.3"
rand = { version = "0.8.5", features = [] }
chrono = "0.4.34"
rusqlite = "0.30.0"
reqwest = { version = "0.11.24", features = ["stream", "blocking", "multipart"] }
serde_json = "1.0.113"
serde = "1.0.196"
anyhow = "1.0.79"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
lazy_static = { version = "1.4.0", features = [] }